updated index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>React Tic-Tac-Toe</title>
   </head>
   <body>
+    <header>
+      <h1>Tic-Tac-Toe</h1>
+      <img src="./public/game-logo.png"/>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
